lab-07/Syntax/Normal/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Syntax/Normal/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListExpr -> ListExpr                       (1)
	%start_pExpr -> Expr                               (2)
	%start_pMatchCase -> MatchCase                     (3)
	%start_pListMatchCase -> ListMatchCase             (4)
	%start_pBinding -> Binding                         (5)
	%start_pListBinding -> ListBinding                 (6)
	%start_pExpr1 -> Expr1                             (7)
	%start_pExpr2 -> Expr2                             (8)
	%start_pExpr3 -> Expr3                             (9)
	%start_pType -> Type                               (10)
	%start_pType1 -> Type1                             (11)
	%start_pFieldType -> FieldType                     (12)
	%start_pListFieldType -> ListFieldType             (13)
	%start_pTyping -> Typing                           (14)
	Ident -> L_Ident                                   (15)
	Program -> ListExpr                                (16)
	ListExpr ->                                        (17)
	ListExpr -> Expr                                   (18)
	ListExpr -> Expr ';' ListExpr                      (19)
	Expr -> 'if' Expr 'then' Expr 'else' Expr          (20)
	Expr -> 'let' Ident '=' Expr 'in' Expr             (21)
	Expr -> 'fun' '(' Ident ':' Type ')' '{' 'return' Expr '}'   (22)
	Expr -> '{' ListBinding '}'                        (23)
	Expr -> '<' Ident '=' Expr '>'                     (24)
	Expr -> 'match' Expr1 '{' ListMatchCase '}'        (25)
	Expr -> '[' ListExpr ']'                           (26)
	Expr -> Expr1                                      (27)
	MatchCase -> '<' Ident '=' Ident '>' '=>' Expr     (28)
	ListMatchCase ->                                   (29)
	ListMatchCase -> MatchCase                         (30)
	ListMatchCase -> MatchCase ';' ListMatchCase       (31)
	Binding -> Ident '=' Expr                          (32)
	ListBinding ->                                     (33)
	ListBinding -> Binding                             (34)
	ListBinding -> Binding ',' ListBinding             (35)
	Expr1 -> Expr1 Expr2                               (36)
	Expr1 -> Expr2                                     (37)
	Expr2 -> 'cons' Expr3 Expr3                        (38)
	Expr2 -> 'head' Expr3                              (39)
	Expr2 -> 'isempty' Expr3                           (40)
	Expr2 -> 'tail' Expr3                              (41)
	Expr2 -> 'succ' Expr3                              (42)
	Expr2 -> 'pred' Expr3                              (43)
	Expr2 -> 'iszero' Expr3                            (44)
	Expr2 -> 'fix' Expr3                               (45)
	Expr2 -> Expr3                                     (46)
	Expr3 -> Expr3 '.' Ident                           (47)
	Expr3 -> 'true'                                    (48)
	Expr3 -> 'false'                                   (49)
	Expr3 -> '0'                                       (50)
	Expr3 -> Ident                                     (51)
	Expr3 -> '(' Expr ')'                              (52)
	Type -> Type1 '->' Type                            (53)
	Type -> '{' ListFieldType '}'                      (54)
	Type -> '<' ListFieldType '>'                      (55)
	Type -> '[' Type ']'                               (56)
	Type -> Type1                                      (57)
	Type1 -> 'Bool'                                    (58)
	Type1 -> 'Nat'                                     (59)
	Type1 -> 'Top'                                     (60)
	Type1 -> 'Bot'                                     (61)
	Type1 -> '(' Type ')'                              (62)
	FieldType -> Ident ':' Type                        (63)
	ListFieldType ->                                   (64)
	ListFieldType -> FieldType                         (65)
	ListFieldType -> FieldType ',' ListFieldType       (66)
	Typing -> Expr ':' Type                            (67)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'->'           { PT _ (TS _ 4) }
	'.'            { PT _ (TS _ 5) }
	'0'            { PT _ (TS _ 6) }
	':'            { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'<'            { PT _ (TS _ 9) }
	'='            { PT _ (TS _ 10) }
	'=>'           { PT _ (TS _ 11) }
	'>'            { PT _ (TS _ 12) }
	'Bool'         { PT _ (TS _ 13) }
	'Bot'          { PT _ (TS _ 14) }
	'Nat'          { PT _ (TS _ 15) }
	'Top'          { PT _ (TS _ 16) }
	'['            { PT _ (TS _ 17) }
	']'            { PT _ (TS _ 18) }
	'cons'         { PT _ (TS _ 19) }
	'else'         { PT _ (TS _ 20) }
	'false'        { PT _ (TS _ 21) }
	'fix'          { PT _ (TS _ 22) }
	'fun'          { PT _ (TS _ 23) }
	'head'         { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'in'           { PT _ (TS _ 26) }
	'isempty'      { PT _ (TS _ 27) }
	'iszero'       { PT _ (TS _ 28) }
	'let'          { PT _ (TS _ 29) }
	'match'        { PT _ (TS _ 30) }
	'pred'         { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'succ'         { PT _ (TS _ 33) }
	'tail'         { PT _ (TS _ 34) }
	'then'         { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'{'            { PT _ (TS _ 37) }
	'}'            { PT _ (TS _ 38) }
	L_Ident        { PT _ (TV $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListExpr rule  1
	%start_pExpr    rule  2
	%start_pMatchCase rule  3
	%start_pListMatchCase rule  4
	%start_pBinding rule  5
	%start_pListBinding rule  6
	%start_pExpr1   rule  7
	%start_pExpr2   rule  8
	%start_pExpr3   rule  9
	%start_pType    rule  10
	%start_pType1   rule  11
	%start_pFieldType rule  12
	%start_pListFieldType rule  13
	%start_pTyping  rule  14
	Ident           rule  15
	Program         rule  16
	ListExpr        rules 17, 18, 19
	Expr            rules 20, 21, 22, 23, 24, 25, 26, 27
	MatchCase       rule  28
	ListMatchCase   rules 29, 30, 31
	Binding         rule  32
	ListBinding     rules 33, 34, 35
	Expr1           rules 36, 37
	Expr2           rules 38, 39, 40, 41, 42, 43, 44, 45, 46
	Expr3           rules 47, 48, 49, 50, 51, 52
	Type            rules 53, 54, 55, 56, 57
	Type1           rules 58, 59, 60, 61, 62
	FieldType       rule  63
	ListFieldType   rules 64, 65, 66
	Typing          rule  67

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'<'            shift, and enter state 25
	'['            shift, and enter state 26
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'head'         shift, and enter state 31
	'if'           shift, and enter state 32
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	'{'            shift, and enter state 41
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 17

	Ident          goto state 17
	Program        goto state 71
	ListExpr       goto state 72
	Expr           goto state 70
	Expr1          goto state 19
	Expr2          goto state 20
	Expr3          goto state 21

State 1

	%start_pListExpr -> . ListExpr                      (rule 1)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'<'            shift, and enter state 25
	'['            shift, and enter state 26
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'head'         shift, and enter state 31
	'if'           shift, and enter state 32
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	'{'            shift, and enter state 41
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 17

	Ident          goto state 17
	ListExpr       goto state 69
	Expr           goto state 70
	Expr1          goto state 19
	Expr2          goto state 20
	Expr3          goto state 21

State 2

	%start_pExpr -> . Expr                              (rule 2)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'<'            shift, and enter state 25
	'['            shift, and enter state 26
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'head'         shift, and enter state 31
	'if'           shift, and enter state 32
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	'{'            shift, and enter state 41
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr           goto state 68
	Expr1          goto state 19
	Expr2          goto state 20
	Expr3          goto state 21

State 3

	%start_pMatchCase -> . MatchCase                    (rule 3)

	'<'            shift, and enter state 66

	MatchCase      goto state 67

State 4

	%start_pListMatchCase -> . ListMatchCase            (rule 4)

	'<'            shift, and enter state 66
	%eof           reduce using rule 29

	MatchCase      goto state 64
	ListMatchCase  goto state 65

State 5

	%start_pBinding -> . Binding                        (rule 5)

	L_Ident        shift, and enter state 16

	Ident          goto state 60
	Binding        goto state 63

State 6

	%start_pListBinding -> . ListBinding                (rule 6)

	L_Ident        shift, and enter state 16
	%eof           reduce using rule 33

	Ident          goto state 60
	Binding        goto state 61
	ListBinding    goto state 62

State 7

	%start_pExpr1 -> . Expr1                            (rule 7)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'head'         shift, and enter state 31
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr1          goto state 59
	Expr2          goto state 20
	Expr3          goto state 21

State 8

	%start_pExpr2 -> . Expr2                            (rule 8)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'head'         shift, and enter state 31
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr2          goto state 58
	Expr3          goto state 21

State 9

	%start_pExpr3 -> . Expr3                            (rule 9)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'false'        shift, and enter state 28
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr3          goto state 57

State 10

	%start_pType -> . Type                              (rule 10)

	'('            shift, and enter state 47
	'<'            shift, and enter state 54
	'Bool'         shift, and enter state 48
	'Bot'          shift, and enter state 49
	'Nat'          shift, and enter state 50
	'Top'          shift, and enter state 51
	'['            shift, and enter state 55
	'{'            shift, and enter state 56

	Type           goto state 52
	Type1          goto state 53

State 11

	%start_pType1 -> . Type1                            (rule 11)

	'('            shift, and enter state 47
	'Bool'         shift, and enter state 48
	'Bot'          shift, and enter state 49
	'Nat'          shift, and enter state 50
	'Top'          shift, and enter state 51

	Type1          goto state 46

State 12

	%start_pFieldType -> . FieldType                    (rule 12)

	L_Ident        shift, and enter state 16

	Ident          goto state 42
	FieldType      goto state 45

State 13

	%start_pListFieldType -> . ListFieldType            (rule 13)

	L_Ident        shift, and enter state 16
	%eof           reduce using rule 64

	Ident          goto state 42
	FieldType      goto state 43
	ListFieldType  goto state 44

State 14

	%start_pTyping -> . Typing                          (rule 14)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'<'            shift, and enter state 25
	'['            shift, and enter state 26
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'head'         shift, and enter state 31
	'if'           shift, and enter state 32
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	'{'            shift, and enter state 41
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr           goto state 18
	Expr1          goto state 19
	Expr2          goto state 20
	Expr3          goto state 21
	Typing         goto state 22

State 15

	Ident -> . L_Ident                                  (rule 15)

	L_Ident        shift, and enter state 16


State 16

	Ident -> L_Ident .                                  (rule 15)

	'('            reduce using rule 15
	')'            reduce using rule 15
	','            reduce using rule 15
	'.'            reduce using rule 15
	'0'            reduce using rule 15
	':'            reduce using rule 15
	';'            reduce using rule 15
	'='            reduce using rule 15
	'>'            reduce using rule 15
	']'            reduce using rule 15
	'cons'         reduce using rule 15
	'else'         reduce using rule 15
	'false'        reduce using rule 15
	'fix'          reduce using rule 15
	'head'         reduce using rule 15
	'in'           reduce using rule 15
	'isempty'      reduce using rule 15
	'iszero'       reduce using rule 15
	'pred'         reduce using rule 15
	'succ'         reduce using rule 15
	'tail'         reduce using rule 15
	'then'         reduce using rule 15
	'true'         reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	L_Ident        reduce using rule 15
	%eof           reduce using rule 15


State 17

	Expr3 -> Ident .                                    (rule 51)

	'('            reduce using rule 51
	')'            reduce using rule 51
	','            reduce using rule 51
	'.'            reduce using rule 51
	'0'            reduce using rule 51
	':'            reduce using rule 51
	';'            reduce using rule 51
	'>'            reduce using rule 51
	']'            reduce using rule 51
	'cons'         reduce using rule 51
	'else'         reduce using rule 51
	'false'        reduce using rule 51
	'fix'          reduce using rule 51
	'head'         reduce using rule 51
	'in'           reduce using rule 51
	'isempty'      reduce using rule 51
	'iszero'       reduce using rule 51
	'pred'         reduce using rule 51
	'succ'         reduce using rule 51
	'tail'         reduce using rule 51
	'then'         reduce using rule 51
	'true'         reduce using rule 51
	'{'            reduce using rule 51
	'}'            reduce using rule 51
	L_Ident        reduce using rule 51
	%eof           reduce using rule 51


State 18

	Typing -> Expr . ':' Type                           (rule 67)

	':'            shift, and enter state 103


State 19

	Expr -> Expr1 .                                     (rule 27)
	Expr1 -> Expr1 . Expr2                              (rule 36)

	'('            shift, and enter state 23
	')'            reduce using rule 27
	','            reduce using rule 27
	'0'            shift, and enter state 24
	':'            reduce using rule 27
	';'            reduce using rule 27
	'>'            reduce using rule 27
	']'            reduce using rule 27
	'cons'         shift, and enter state 27
	'else'         reduce using rule 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'head'         shift, and enter state 31
	'in'           reduce using rule 27
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'then'         reduce using rule 27
	'true'         shift, and enter state 40
	'}'            reduce using rule 27
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 27

	Ident          goto state 17
	Expr2          goto state 78
	Expr3          goto state 21

State 20

	Expr1 -> Expr2 .                                    (rule 37)

	'('            reduce using rule 37
	')'            reduce using rule 37
	','            reduce using rule 37
	'0'            reduce using rule 37
	':'            reduce using rule 37
	';'            reduce using rule 37
	'>'            reduce using rule 37
	']'            reduce using rule 37
	'cons'         reduce using rule 37
	'else'         reduce using rule 37
	'false'        reduce using rule 37
	'fix'          reduce using rule 37
	'head'         reduce using rule 37
	'in'           reduce using rule 37
	'isempty'      reduce using rule 37
	'iszero'       reduce using rule 37
	'pred'         reduce using rule 37
	'succ'         reduce using rule 37
	'tail'         reduce using rule 37
	'then'         reduce using rule 37
	'true'         reduce using rule 37
	'{'            reduce using rule 37
	'}'            reduce using rule 37
	L_Ident        reduce using rule 37
	%eof           reduce using rule 37


State 21

	Expr2 -> Expr3 .                                    (rule 46)
	Expr3 -> Expr3 . '.' Ident                          (rule 47)

	'('            reduce using rule 46
	')'            reduce using rule 46
	','            reduce using rule 46
	'.'            shift, and enter state 79
	'0'            reduce using rule 46
	':'            reduce using rule 46
	';'            reduce using rule 46
	'>'            reduce using rule 46
	']'            reduce using rule 46
	'cons'         reduce using rule 46
	'else'         reduce using rule 46
	'false'        reduce using rule 46
	'fix'          reduce using rule 46
	'head'         reduce using rule 46
	'in'           reduce using rule 46
	'isempty'      reduce using rule 46
	'iszero'       reduce using rule 46
	'pred'         reduce using rule 46
	'succ'         reduce using rule 46
	'tail'         reduce using rule 46
	'then'         reduce using rule 46
	'true'         reduce using rule 46
	'{'            reduce using rule 46
	'}'            reduce using rule 46
	L_Ident        reduce using rule 46
	%eof           reduce using rule 46


State 22

	%start_pTyping -> Typing .                          (rule 14)

	%eof           accept


State 23

	Expr3 -> '(' . Expr ')'                             (rule 52)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'<'            shift, and enter state 25
	'['            shift, and enter state 26
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'head'         shift, and enter state 31
	'if'           shift, and enter state 32
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	'{'            shift, and enter state 41
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr           goto state 102
	Expr1          goto state 19
	Expr2          goto state 20
	Expr3          goto state 21

State 24

	Expr3 -> '0' .                                      (rule 50)

	'('            reduce using rule 50
	')'            reduce using rule 50
	','            reduce using rule 50
	'.'            reduce using rule 50
	'0'            reduce using rule 50
	':'            reduce using rule 50
	';'            reduce using rule 50
	'>'            reduce using rule 50
	']'            reduce using rule 50
	'cons'         reduce using rule 50
	'else'         reduce using rule 50
	'false'        reduce using rule 50
	'fix'          reduce using rule 50
	'head'         reduce using rule 50
	'in'           reduce using rule 50
	'isempty'      reduce using rule 50
	'iszero'       reduce using rule 50
	'pred'         reduce using rule 50
	'succ'         reduce using rule 50
	'tail'         reduce using rule 50
	'then'         reduce using rule 50
	'true'         reduce using rule 50
	'{'            reduce using rule 50
	'}'            reduce using rule 50
	L_Ident        reduce using rule 50
	%eof           reduce using rule 50


State 25

	Expr -> '<' . Ident '=' Expr '>'                    (rule 24)

	L_Ident        shift, and enter state 16

	Ident          goto state 101

State 26

	Expr -> '[' . ListExpr ']'                          (rule 26)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'<'            shift, and enter state 25
	'['            shift, and enter state 26
	']'            reduce using rule 17
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'head'         shift, and enter state 31
	'if'           shift, and enter state 32
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	'{'            shift, and enter state 41
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	ListExpr       goto state 100
	Expr           goto state 70
	Expr1          goto state 19
	Expr2          goto state 20
	Expr3          goto state 21

State 27

	Expr2 -> 'cons' . Expr3 Expr3                       (rule 38)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'false'        shift, and enter state 28
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr3          goto state 99

State 28

	Expr3 -> 'false' .                                  (rule 49)

	'('            reduce using rule 49
	')'            reduce using rule 49
	','            reduce using rule 49
	'.'            reduce using rule 49
	'0'            reduce using rule 49
	':'            reduce using rule 49
	';'            reduce using rule 49
	'>'            reduce using rule 49
	']'            reduce using rule 49
	'cons'         reduce using rule 49
	'else'         reduce using rule 49
	'false'        reduce using rule 49
	'fix'          reduce using rule 49
	'head'         reduce using rule 49
	'in'           reduce using rule 49
	'isempty'      reduce using rule 49
	'iszero'       reduce using rule 49
	'pred'         reduce using rule 49
	'succ'         reduce using rule 49
	'tail'         reduce using rule 49
	'then'         reduce using rule 49
	'true'         reduce using rule 49
	'{'            reduce using rule 49
	'}'            reduce using rule 49
	L_Ident        reduce using rule 49
	%eof           reduce using rule 49


State 29

	Expr2 -> 'fix' . Expr3                              (rule 45)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'false'        shift, and enter state 28
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr3          goto state 98

State 30

	Expr -> 'fun' . '(' Ident ':' Type ')' '{' 'return' Expr '}'    (rule 22)

	'('            shift, and enter state 97


State 31

	Expr2 -> 'head' . Expr3                             (rule 39)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'false'        shift, and enter state 28
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr3          goto state 96

State 32

	Expr -> 'if' . Expr 'then' Expr 'else' Expr         (rule 20)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'<'            shift, and enter state 25
	'['            shift, and enter state 26
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'head'         shift, and enter state 31
	'if'           shift, and enter state 32
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	'{'            shift, and enter state 41
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr           goto state 95
	Expr1          goto state 19
	Expr2          goto state 20
	Expr3          goto state 21

State 33

	Expr2 -> 'isempty' . Expr3                          (rule 40)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'false'        shift, and enter state 28
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr3          goto state 94

State 34

	Expr2 -> 'iszero' . Expr3                           (rule 44)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'false'        shift, and enter state 28
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 17
	Expr3          goto state 93

State 35

	Expr -> 'let' . Ident '=' Expr 'in' Expr            (rule 21)

	L_Ident        shift, and enter state 16

	Ident          goto state 92

State 36

	Expr -> 'match' . Expr1 '{' ListMatchCase '}'       (rule 25)

	'('            shift, and enter state 23
	'0'            shift, and enter state 24
	'cons'         shift, and enter state 27
	'false'        shift, and enter state 28
	'fix'          shift, and enter state 29
	'head'         shift, and enter state 31
	'isempty'      shift, and enter state 33
	'iszero'       shift, and enter state 34
	'pred'         shift, and enter state 37
	'succ'         shift, and enter state 38
	'tail'         shift, and enter state 39
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 16
